samples/_failures_safe/1761226729_32c701_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82530796.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_82530796.c:164:23: error: expected ‘)’ at end of input
  164 |     strcpy(token.value
      |           ~           ^
      |                       )
./samples/SAFE/__tmp_82530796.c:164:5: error: too few arguments to function ‘strcpy’
  164 |     strcpy(token.value
      |     ^~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_82530796.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_82530796.c:164:5: error: expected declaration or statement at end of input
  164 |     strcpy(token.value
      |     ^~~~~~
